<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MusicApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library">Library</string>
    <string name="title_discovery">Discovery</string>
    <string name="image_button_description">image button description</string>
    <string name="title_albums_hot">Albums hot</string>
    <string name="image_desc">Song avatar</string>
    <string name="text_song_title">Song title</string>
    <string name="text_song_artist">Song artist</string>
    <string name="title_recommended">Recommended songs</string>
    <string name="title_detail_album">Detail album</string>
    <string name="title_song_list">Song list</string>
    <string name="text_playlist_num_of_song">Number of songs: %d</string>
    <string name="item_download">Download</string>
    <string name="item_add_to_favourites">Add to favorite</string>
    <string name="item_add_to_playlist">Add to playlist</string>
    <string name="item_add_to_queue">Add to play next</string>
    <string name="item_view_album">View album</string>
    <string name="item_view_artist">View artist</string>
    <string name="item_block">Block</string>
    <string name="item_report_error">Report error</string>
    <string name="item_view_song_information">View song information</string>
    <string name="text_song_detail_title">Title: %s</string>
    <string name="text_song_detail_artist">Artist: %s</string>
    <string name="text_song_detail_album">Album: %s</string>
    <string name="text_song_detail_duration">Duration: %d</string>
    <string name="text_song_detail_counter">Number of plays: %d</string>
    <string name="text_song_detail_replay_counter">Number of replay: %d</string>
    <string name="text_song_detail_favorite_status">Is your favorite song: %s</string>
    <string name="text_song_detail_genre">Genre: %s</string>
    <string name="text_song_detail_year">Publish year: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">N/A</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="text_more">…</string>
    <string name="under_line">_ __ _</string>
    <string name="text_time">--:--</string>
    <string name="permission_denied_message">Application cannot play music without post notification permission. Please grant post notification to continue.</string>
    <string name="notification_permission_rationale">This application need post notification permission to play music correctly and give you more experience when using app. Would you agree permit app use this permission?</string>
    <string name="action_agree">Agree</string>
    <string name="permission_denied">This application cannot play music if you don\'t allow it use post notification permission.</string>
    <string name="title_recent">Recent heard</string>
    <string name="title_favorite">Favorite songs</string>
    <string name="text_number_of_songs">Number of songs: %d</string>
    <string name="text_album_name">Album name</string>
    <string name="label_create_playlist">Create playlist</string>
    <string name="title_playlist">Playlists</string>
    <string name="playlist_name_hint">Playlist name</string>
    <string name="title_create_playlist">Create playlist</string>
    <string name="action_create">Create</string>
    <string name="error_empty_playlist_name">Playlist name cannot be empty</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_playlist_exists">This playlist name already in used</string>
    <string name="add_to_playlist_success">The song has been added to playlist \"%s\"</string>
    <string name="add_to_playlist_failed">This song already exists in your selected playlist</string>
    <string name="title_playlist_detail">Playlist detail</string>
    <string name="artist_name">Artist name</string>
    <string name="text_number_subscriber">Number subscriber: %d</string>
    <string name="action_interest">Interest</string>
    <string name="title_artist">Featured artists</string>
    <string name="title_artist_detail">Artist information</string>
    <string name="text_artist_name">Artist name: %s</string>
    <string name="text_number_of_interest">Number of interest: %d</string>
    <string name="text_your_interested">Your interested artist: %s</string>
    <string name="title_most_heard">Most listened songs</string>
    <string name="title_for_you">Songs for you</string>
    <string name="languages_head">Languages</string>
    <string name="app_theme_header">Application theme</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="text_size_header">Display text size</string>
    <string name="language_title">Application language</string>
    <string name="text_size_title">Application text size</string>
    <string name="settings_title">Settings</string>
    <string name="key_history">Some key</string>
    <string name="title_history_searched_key">History searched keys</string>
    <string name="text_clear_all">Clear all</string>
    <string name="title_recent_searched_songs">Recent searched songs</string>
    <string name="search_hint">Song name, artist..</string>
    <string name="title_confirmation">Deletion confirm</string>
    <string name="message_confirm_clear_history">Are you sure to delete all history searched keys?</string>
    <string name="message_confirm_clear_song_history">Are you sure to delete all history searched songs?</string>
</resources>