<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/languages_head">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="language"
            android:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_theme_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="dark_mode"
            app:title="@string/dark_mode_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_size_header">

        <ListPreference
            android:title="@string/text_size_title"
            app:defaultValue="16sp"
            app:entries="@array/text_size_entries"
            app:entryValues="@array/text_size_values"
            app:key="text_size"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>