<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="@dimen/button_width_48"
        android:layout_height="@dimen/height_48"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginBottom="@dimen/margin_4"
        app:cardCornerRadius="@dimen/card_corner_radius_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_playlist_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_desc"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_item_playlist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/margin_4"
        android:text="@string/text_album_name"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/btn_item_playlist_option"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView4" />

    <TextView
        android:id="@+id/text_item_playlist_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/text_number_of_songs"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintEnd_toEndOf="@+id/text_item_playlist_name"
        app:layout_constraintStart_toStartOf="@+id/text_item_playlist_name"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <ImageButton
        android:id="@+id/btn_item_playlist_option"
        android:layout_width="@dimen/button_width_48"
        android:layout_height="@dimen/button_height_48"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/image_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView4"
        app:srcCompat="@drawable/ic_more_horiz"
        tools:ignore="RedundantDescriptionCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>